logs/zmqf.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyzmq-16.0.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/.libs'...
Listing './lib/python3.5/site-packages/zmq/asyncio'...
Listing './lib/python3.5/site-packages/zmq/auth'...
Listing './lib/python3.5/site-packages/zmq/auth/asyncio'...
Listing './lib/python3.5/site-packages/zmq/backend'...
Listing './lib/python3.5/site-packages/zmq/backend/cffi'...
Listing './lib/python3.5/site-packages/zmq/backend/cython'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Listing './lib/python3.5/site-packages/zmq/green/eventloop'...
Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/sugar'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/tests/asyncio'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './lib/python3.5/site-packages/zmqf'...
Listing './lib/python3.5/site-packages/zmqf/client'...
Compiling './lib/python3.5/site-packages/zmqf/client/zmqf_client.py'...
***   File "./lib/python3.5/site-packages/zmqf/client/zmqf_client.py", line 109
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zmqf/core'...
Compiling './lib/python3.5/site-packages/zmqf/core/base.py'...
***   File "./lib/python3.5/site-packages/zmqf/core/base.py", line 91
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zmqf/examples'...
Listing './lib/python3.5/site-packages/zmqf/examples/mpbs'...
Compiling './lib/python3.5/site-packages/zmqf/examples/mpbs/mpbs_server.py'...
***   File "./lib/python3.5/site-packages/zmqf/examples/mpbs/mpbs_server.py", line 16
    print self.request.uri, self.request.headers, self.request.body
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zmqf/examples/mpup'...
Compiling './lib/python3.5/site-packages/zmqf/examples/mpup/server.py'...
***   File "./lib/python3.5/site-packages/zmqf/examples/mpup/server.py", line 16
    print self.request.uri, self.request.headers, self.request.body
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zmqf/examples/mrer'...
Compiling './lib/python3.5/site-packages/zmqf/examples/mrer/client.py'...
***   File "./lib/python3.5/site-packages/zmqf/examples/mrer/client.py", line 11
    print zmqf_client.request(server_addr, json={"a": 1}, pattern=ZmqfPattern.MRER)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zmqf/examples/mrer/server.py'...
***   File "./lib/python3.5/site-packages/zmqf/examples/mrer/server.py", line 16
    print self.request.uri, self.request.headers, self.request.body
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zmqf/utils'...
Listing './lib/python3.5/site-packages/zmqf-0.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
